--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+  box-sizing: border-box;
+}
+html, body {
+  height: 100%;
+  padding: 0;
+}
+body {
+  font-family: 'Poppins', sans-serif;
+  overflow: hidden;
+
+}
